# nano-banana-demos

./: .gitignore  README.rst  pyproject.toml
cli/: gemini_client.py  main.py  settings.py
docs/: gemini_best_practices.rst  references.rst
prompts/design/: music_score_prompt.txt
prompts/infographics/activation_functions/: activations.py  activations.txt  activations_prompt.txt
prompts/infographics/dark_matter_dark_engergy/: dark_matter_and_dark_energy_prompt.txt  dark_matter_prompt.txt
prompts/infographics/dynamic_systems/: dynamic_systems_cartoon_prompt.txt  dynamic_systems_details.txt  dynamic_systems_details_prompt.txt  dynamic_systems_formal_prompt.txt  dynamic_systems_math_prompt.txt  systems.txt
prompts/infographics/earth_science/: clouds.txt  clouds_prompt.txt  clouds_prompt2.txt  water.txt  water_prompt.txt
prompts/templates/Artistic_Transformations/: minimalist_negative_space.txt  photo_to_classic.txt  photo_to_lego.txt  photo_to_sculpture.txt  photo_to_sticker.txt
prompts/templates/Character_Design_Art/: anime_character_design.txt  anime_to_real_coser.txt  character_poses.txt  colorify_drawing.txt  illustration_to_figure.txt  stylized_illustrations.txt  typographic_illustration.txt
prompts/templates/Image_Editing_Analysis/: annotation.txt  photo_editing.txt  photo_restore.txt  photo_to_multi_hairstyles.txt
prompts/templates/Infographics_Content/: cartoon_infographics.txt  (+1 more)
webapp/: README.rst
webapp/backend/: gemini_client.py  requirements.txt  server.py
webapp/docs/: design_spec.rst
webapp/frontend/: README.md  package.json
(+18 files in other folders)
