[project]
name = "nano-banana-demos"
version = "0.1.0"
description = "A versatile project showcasing Google's Gemini API for image generation and manipulation, with both CLI and web application interfaces."
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.33.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
